--- a/TSRO/members/templates/product.html
+++ b/TSRO/members/templates/product.html
@@ -10,6 +10,7 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #85ff85, #b1ffa7);
       background-color: #e8f5e9;
       margin: 0;
       padding: 0;
