--- a/TSRO/members/templates/homepage.html
+++ b/TSRO/members/templates/homepage.html
@@ -186,7 +186,7 @@
 
   <div class="dashboard-container">
     <div class="card">
-      <div class="branch-image"></div>
+      <div class="branch-image" style="background-image: url('https://i.ibb.co/s9Qz5zHM/7f4a1613-1416-463e-90b7-0db789b90c80.jpg'); background-size: cover; background-position: center;"></div>
       <div class="branch-title">Branch 1: TSRO Gasoline Station</div>
       <div class="branch-description">
         <p style="font-weight: 600; color: #1b5e20; margin-bottom: 8px;">Mampirao, San Jose, Camarines Sur</p>
